# advent-of-code

./: .gitmodules  README.md  flake.nix  shell.nix
.github/workflows/: 2015.yml  2017.yml  2018.yml  2019.yml  2020.yml  2021.yml  2022.yml  2023.yml  2024.yml  2025.yml
2015/: CMakeLists.txt  README.md
2015/day01/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day02/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day03/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day04/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day05/: CMakeLists.txt  README.md  lib.cc  lib.h  main.cc  test.cc
2015/day06/: CMakeLists.txt  README.md  lib.cc  lib.h  main.cc  test.cc
2015/day07/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day08/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day09/: lib.cc  lib.h  main.cc  test.cc
2015/day10/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day11/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day12/: CMakeLists.txt  README.md  lib.cc  lib.h  main.cc  test.cc
2015/day13/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day14/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day15/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day16/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day17/: lib.cc  lib.h  main.cc  test.cc
2015/day18/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/day19/: lib.cc  lib.h  main.cc  test.cc
2015/day20/: lib.cc  lib.h  main.cc  test.cc
2015/day21/: README.md  lib.cc  lib.h  main.cc  test.cc
2015/libcommon/: CMakeLists.txt
2015/libcommon/include/common/: md5.h  point2d.h  string_convert.h  vector_convert.h
2015/libcommon/src/: md5.cc  point2d.cc  string_convert.cc  vector_convert.cc
2017/: .eslintrc.json  .gitattributes  README.md  eslint.config.cjs  index.js  package-lock.json  package.json  perfmeasure.js
2017/day01/: README.md  index.js  index.test.js
2017/day02/: README.md  index.js  index.test.js
2017/day03/: README.md  index.js  index.test.js
2017/day04/: README.md  index.js  index.test.js
2017/day05/: README.md  index.js  index.test.js
2017/day06/: README.md  index.js  index.test.js
2017/day07/: README.md  index.js  index.test.js
2017/day08/: README.md  index.js  index.test.js
2017/day09/: README.md  index.js  index.test.js
2017/day10/: README.md  index.js  index.test.js
2017/day11/: README.md  index.js  index.test.js
2017/day12/: README.md  index.js  index.test.js
2017/day13/: README.md  index.js  index.test.js
2017/day14/: README.md  index.js  index.test.js
2017/day15/: README.md  index.js  index.test.js
2017/day16/: README.md  index.js  index.test.js
2017/day17/: README.md  index.js  index.test.js
2017/day18/: README.md  index.js  index.test.js
2017/day19/: README.md  index.js  index.test.js
2017/day20/: README.md  index.js  index.test.js
2017/day21/: README.md  index.js  index.test.js
2017/day22/: README.md  index.js  index.test.js
2017/day23/: README.md  index.js  index.test.js
2017/day24/: README.md  index.js  index.test.js
2017/day25/: README.md  index.js  index.test.js
2017/test/: day01.js  day03.js  day04.js
2017/wasm/: build.sh  day15.c  transform.sh
2018/: .editorconfig  .pylintrc  README.md  conftest.py  requirements.txt  run
2018/day01/: day01.py  test_day01.py
2018/day02/: day02.py  test_day02.py
2018/day03/: day03.py  test_day03.py
2018/day04/: day04.py  test_day04.py
2018/day05/: day05.py  test_day05.py
2018/day06/: day06.py  test_day06.py
2018/day07/: README.md  day07.py  test_day07.py
2018/day08/: day08.py  test_day08.py
2018/day09/: README.md  day09.py  test_day09.py
2018/day10/: day10.py  test_day10.py
2018/day11/: day11.py  test_day11.py
2018/day12/: day12.py  test_day12.py
2018/day13/: day13.py  test_day13.py
2018/day14/: day14.py  test_day14.py
2018/day15/: day15.py  test_day15.py
2018/day16/: README.md  day16.py  test_day16.py
2018/day17/: README.md  day17.py  test_day17.py
2018/day18/: day18.py  (+1 more)
2019/: Cargo.toml  README.md
2019/docs/: day05.md  day07.md  day09.md  day11.md  day13.md  day15.md  day17.md  day18.md  day19.md  day20.md
2019/src/: day01.rs  day02.rs  day03.rs  day04.rs  lib.rs  shared.rs
2019/src/days/: day01.rs  day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs
2019/src/shared/: intcode.rs  num.rs  point.rs  tree.rs
2019/tests/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs
2020/: README.md  go.mod
2021/: CMakeLists.txt  README.md
2021/day01/: CMakeLists.txt  lib.cc  lib.h  main.cc  test.cc
2021/day02/: lib.cc  lib.h  main.cc  test.cc
2021/day03/: lib.cc  lib.h  main.cc  test.cc
2021/day04/: CMakeLists.txt  lib.cc  lib.h  main.cc  test.cc
2021/day05/: CMakeLists.txt  lib.cc  lib.h  main.cc  test.cc
2021/day06/: lib.cc  lib.h  main.cc  test.cc
2021/day07/: CMakeLists.txt  lib.cc  lib.h  main.cc  test.cc
2021/day08/: lib.cc  lib.h  main.cc  test.cc
2021/day09/: lib.cc  lib.h  main.cc  test.cc
2021/day10/: lib.cc  lib.h  main.cc  test.cc
2021/day11/: lib.cc  lib.h  main.cc  test.cc
2021/day12/: lib.cc  lib.h  main.cc  test.cc
2021/day13/: lib.cc  lib.h  main.cc  test.cc
2021/day14/: lib.cc  lib.h  main.cc  test.cc
2021/day15/: lib.cc  lib.h  main.cc  test.cc
2021/day16/: lib.cc  lib.h  main.cc  test.cc
2021/day17/: lib.cc  lib.h  main.cc  test.cc
2021/libcommon/: CMakeLists.txt
2021/libcommon/include/common/: input_parser.h  point2d.h  vector_convert.h
2021/libcommon/src/: input_parser.cc  point2d.cc  vector_convert.cc
2022/: Cargo.toml  README.md
2023/: README.md  settings.gradle.kts
2024/: README.md  go.mod  go.sum
2025/: Cargo.toml  README.md
(+213 files in other folders)
