[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Kyle Farnung <kfarnung@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = "5.99.0"
num = "0.2.0"
ordered-float = "1.0.2"
permutohedron = "0.2.4"
regex = "1"
